# aiAgentCore

./: .gitignore  README.md  buildspec-ci.yml  buildspec-deploy.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy_infra.yml  oidc_test.yml
agent/: Dockerfile
cicd/: README.md  codepipeline.yaml
infra/: app.py
infra/cdk.out/: InfraStack.assets.json  InfraStack.template.json  manifest.json  tree.json
scripts/: invoke_runtime.py
src/agent/: Dockerfile  app.py  requirements.txt  server.py  settings.py
src/agent/llm/: bedrock.py
src/agent/pdf/: render.py
src/agent/storage/: dynamo.py  s3.py
src/aiagentcore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_smoke.py
tools/: get_product.py  update_inventory.py
